# cmd/api/carts.go
@@ -99,6 +99,46 @@ func (app *Application) IncrementCartsItemHandler(w http.ResponseWriter, r *http
 	ResponseSuccess(w, r, "success increment quantity item", http.StatusOK)
 }
 
+// @Summary		Decrement cart's item
+// @Description	Decrement quantity's item
+// @Tags			Carts
+// @Accept			json
+// @Produce		json
+// @Security		JWT
+// @Param			id	path		int	true	"cart id"
+// @Success		200	{object}	main.Envelope{data=string,error=nil}
+// @Failure		400	{object}	main.Envelope{data=nil,error=string}
+// @Failure		401	{object}	main.Envelope{data=nil,error=string}
+// @Failure		403	{object}	main.Envelope{data=nil,error=string}
+// @Failure		404	{object}	main.Envelope{data=nil,error=string}
+// @Failure		500	{object}	main.Envelope{data=nil,error=string}
+// @Router			/carts/{id}/decrement [patch]
+func (app *Application) DecrementCartsHandler(w http.ResponseWriter, r *http.Request) {
+	idParam := chi.URLParam(r, "id")
+
+	id, err := strconv.Atoi(idParam)
+	if err != nil {
+		ResponseClientError(w, r, err, http.StatusBadRequest)
+		return
+	}
+
+	if err := app.Services.CartsService.DecrementItem(r.Context(), id); err != nil {
+		errService := errorService.GetError(err)
+		switch errService.E {
+		case service.ErrCartNotFound:
+			ResponseClientError(w, r, err, http.StatusNotFound)
+		case service.ErrCartMinQuantity:
+			ResponseClientError(w, r, err, http.StatusBadRequest)
+		default:
+			ResponseServerError(w, r, err, http.StatusInternalServerError)
+		}
+		return
+	}
+
+	ResponseSuccess(w, r, "success decrement quantity item", http.StatusOK)
+
+}
+
 func (app *Application) DeleteCartsHandler(w http.ResponseWriter, r *http.Request) {
 
 }
